seeqt/QtCore/gen_qstringconverter_base.h

class QStringConverter;
class QStringConverterBase;
typedef QStringConverterBase::State QStringConverterBase__State;
class QStringConverterBase__State;
typedef struct QStringConverter QStringConverter;
typedef struct QStringConverterBase QStringConverterBase;
typedef struct QStringConverterBase__State QStringConverterBase__State;
bool QStringConverter_isValid(const QStringConverter* self);
void QStringConverter_resetState(QStringConverter* self);
bool QStringConverter_hasError(const QStringConverter* self);
const char* QStringConverter_name(const QStringConverter* self);
const char* QStringConverter_nameForEncoding(int e);
QStringConverterBase__State* QStringConverterBase__State_new();
QStringConverterBase__State* QStringConverterBase__State_new2(int f);
void QStringConverterBase__State_clear(QStringConverterBase__State* self);
void QStringConverterBase__State_reset(QStringConverterBase__State* self);
void QStringConverterBase__State_delete(QStringConverterBase__State* self);